--- a/RAG_QA_BOT.ipynb
+++ b/RAG_QA_BOT.ipynb
@@ -863,11 +863,11 @@
         "print(f\"First chunk: {data_chunks[0][:100]}...\")  # Print first 100 characters of the first chunk\n"
       ],
       "metadata": {
-        "id": "HAPSjP0cAnO4",
-        "outputId": "2d81c4a6-dc8d-4eb8-dcb4-d3fb6a59bc46",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "HAPSjP0cAnO4",
+        "outputId": "2d81c4a6-dc8d-4eb8-dcb4-d3fb6a59bc46"
       },
       "execution_count": 14,
       "outputs": [
@@ -1020,17 +1020,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 26,
       "metadata": {
         "id": "HQiEn4f-Mrmq"
       },
       "outputs": [],
       "source": [
-        "def retrieve_relevant_chunks(query,index_name, top_k=5):\n",
+        "def retrieve_relevant_chunks(query,index_name, top_k=10):\n",
         "    index = pc.Index(index_name)\n",
         "    query_embedding = encoder.encode(query).tolist()\n",
         "    results = index.query(vector=query_embedding, top_k=top_k, include_metadata=True)\n",
-        "    return [result['metadata']['text'] for result in results['matches']]"
+        "    #print(results)\n",
+        "    size = len(results['matches'])\n",
+        "    sum_of_score  = 0.0\n",
+        "    for result in results['matches']:\n",
+        "        sum_of_score+=result['score']\n",
+        "    avg_score = sum_of_score/size\n",
+        "    # print(avg_score)\n",
+        "    return [result['metadata']['text'] if result['score'] >=avg_score else \"\" for result in results['matches']]"
       ]
     },
     {
@@ -1500,7 +1507,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP+cmcGo4UXfoU9ZwOTJ1HA",
+      "authorship_tag": "ABX9TyPmYRwIufnwFqX32py4B3vR",
       "include_colab_link": true
     },
     "kernelspec": {
