--- a/RAG_QA_BOT.ipynb
+++ b/RAG_QA_BOT.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -132,7 +132,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "ky5BzftQzOMs"
       },
@@ -147,7 +147,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "eP-W6EnVzSDT"
       },
@@ -159,7 +159,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "collapsed": true,
         "id": "EbeaHX8B8Pqg"
@@ -174,7 +174,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "LK7OBFHd_Jg0"
       },
@@ -186,7 +186,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -502,7 +502,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -657,13 +657,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "XrbCgwuVDbEP",
-        "outputId": "731f0977-1398-4212-df7b-7992abc88f61",
+        "outputId": "61a20bb3-fe5f-420f-a19b-1c4856d5b866",
         "collapsed": true
       },
       "outputs": [
@@ -671,39 +671,55 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Requirement already satisfied: PyPDF2 in /usr/local/lib/python3.10/dist-packages (3.0.1)\n",
+            "Collecting PyPDF2\n",
+            "  Downloading pypdf2-3.0.1-py3-none-any.whl.metadata (6.8 kB)\n",
             "Requirement already satisfied: pandas in /usr/local/lib/python3.10/dist-packages (2.1.4)\n",
-            "Requirement already satisfied: pdfplumber in /usr/local/lib/python3.10/dist-packages (0.11.4)\n",
-            "Collecting python-docx\n",
-            "  Downloading python_docx-1.1.2-py3-none-any.whl.metadata (2.0 kB)\n",
+            "Collecting pdfplumber\n",
+            "  Downloading pdfplumber-0.11.4-py3-none-any.whl.metadata (41 kB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m42.0/42.0 kB\u001b[0m \u001b[31m1.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hCollecting docx2txt\n",
+            "  Downloading docx2txt-0.8.tar.gz (2.8 kB)\n",
+            "  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
             "Requirement already satisfied: numpy<2,>=1.22.4 in /usr/local/lib/python3.10/dist-packages (from pandas) (1.26.4)\n",
             "Requirement already satisfied: python-dateutil>=2.8.2 in /usr/local/lib/python3.10/dist-packages (from pandas) (2.8.2)\n",
             "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.10/dist-packages (from pandas) (2024.2)\n",
             "Requirement already satisfied: tzdata>=2022.1 in /usr/local/lib/python3.10/dist-packages (from pandas) (2024.1)\n",
-            "Requirement already satisfied: pdfminer.six==20231228 in /usr/local/lib/python3.10/dist-packages (from pdfplumber) (20231228)\n",
+            "Collecting pdfminer.six==20231228 (from pdfplumber)\n",
+            "  Downloading pdfminer.six-20231228-py3-none-any.whl.metadata (4.2 kB)\n",
             "Requirement already satisfied: Pillow>=9.1 in /usr/local/lib/python3.10/dist-packages (from pdfplumber) (9.4.0)\n",
-            "Requirement already satisfied: pypdfium2>=4.18.0 in /usr/local/lib/python3.10/dist-packages (from pdfplumber) (4.30.0)\n",
-            "Requirement already satisfied: charset-normalizer>=2.0.0 in /usr/local/lib/python3.10/dist-packages (from pdfminer.six==20231228->pdfplumber) (3.3.2)\n",
+            "Collecting pypdfium2>=4.18.0 (from pdfplumber)\n",
+            "  Downloading pypdfium2-4.30.0-py3-none-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (48 kB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m48.5/48.5 kB\u001b[0m \u001b[31m1.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hRequirement already satisfied: charset-normalizer>=2.0.0 in /usr/local/lib/python3.10/dist-packages (from pdfminer.six==20231228->pdfplumber) (3.3.2)\n",
             "Requirement already satisfied: cryptography>=36.0.0 in /usr/local/lib/python3.10/dist-packages (from pdfminer.six==20231228->pdfplumber) (43.0.1)\n",
-            "Requirement already satisfied: lxml>=3.1.0 in /usr/local/lib/python3.10/dist-packages (from python-docx) (4.9.4)\n",
-            "Requirement already satisfied: typing-extensions>=4.9.0 in /usr/local/lib/python3.10/dist-packages (from python-docx) (4.12.2)\n",
             "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.10/dist-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n",
             "Requirement already satisfied: cffi>=1.12 in /usr/local/lib/python3.10/dist-packages (from cryptography>=36.0.0->pdfminer.six==20231228->pdfplumber) (1.17.1)\n",
             "Requirement already satisfied: pycparser in /usr/local/lib/python3.10/dist-packages (from cffi>=1.12->cryptography>=36.0.0->pdfminer.six==20231228->pdfplumber) (2.22)\n",
-            "Downloading python_docx-1.1.2-py3-none-any.whl (244 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m244.3/244.3 kB\u001b[0m \u001b[31m2.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hInstalling collected packages: python-docx\n",
-            "Successfully installed python-docx-1.1.2\n"
+            "Downloading pypdf2-3.0.1-py3-none-any.whl (232 kB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m232.6/232.6 kB\u001b[0m \u001b[31m10.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hDownloading pdfplumber-0.11.4-py3-none-any.whl (59 kB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m59.2/59.2 kB\u001b[0m \u001b[31m2.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hDownloading pdfminer.six-20231228-py3-none-any.whl (5.6 MB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m5.6/5.6 MB\u001b[0m \u001b[31m36.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hDownloading pypdfium2-4.30.0-py3-none-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (2.8 MB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.8/2.8 MB\u001b[0m \u001b[31m46.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hBuilding wheels for collected packages: docx2txt\n",
+            "  Building wheel for docx2txt (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for docx2txt: filename=docx2txt-0.8-py3-none-any.whl size=3959 sha256=b21351e1aea990e0dcde532f301e3fb81eacb5679dfd69e79606723799a7abe0\n",
+            "  Stored in directory: /root/.cache/pip/wheels/22/58/cf/093d0a6c3ecfdfc5f6ddd5524043b88e59a9a199cb02352966\n",
+            "Successfully built docx2txt\n",
+            "Installing collected packages: docx2txt, pypdfium2, PyPDF2, pdfminer.six, pdfplumber\n",
+            "Successfully installed PyPDF2-3.0.1 docx2txt-0.8 pdfminer.six-20231228 pdfplumber-0.11.4 pypdfium2-4.30.0\n"
           ]
         }
       ],
       "source": [
-        "!pip install PyPDF2 pandas pdfplumber python-docx"
+        "!pip install PyPDF2 pandas pdfplumber docx2txt"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 2,
       "metadata": {
         "id": "sOh3RYnEEfqN"
       },
@@ -712,12 +728,12 @@
         "import PyPDF2\n",
         "import pandas as pd\n",
         "import pdfplumber\n",
-        "from docx import Document"
+        "import docx2txt"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 4,
       "metadata": {
         "id": "ni_hiqwdDhtq"
       },
@@ -731,9 +747,9 @@
         "    file_extension = os.path.splitext(file_path)[1].lower()\n",
         "    data_chunks=\"\"\n",
         "    if file_extension == '.pdf':\n",
-        "        data_chunks = process_pdf(file_path, chunk_size)\n",
+        "        data_chunks = process_pdf2(file_path, chunk_size)\n",
         "    elif file_extension == \".docx\":\n",
-        "        data_chunks = read_word_file(file_path)\n",
+        "        data_chunks = process_docx(file_path, chunk_size)\n",
         "    elif file_extension == '.csv':\n",
         "        data_chunks = process_csv(file_path, chunk_size)\n",
         "    elif file_extension in ['.txt', '.md']:\n",
@@ -744,12 +760,26 @@
         "    return data_chunks\n",
         "\n",
         "# Function to read the content of a Word file\n",
-        "def read_word_file(file_path):\n",
-        "    doc = Document(file_path)\n",
-        "    full_text = []\n",
-        "    for paragraph in doc.paragraphs:\n",
-        "        full_text.append(paragraph.text)\n",
-        "    return \"\\n\".join(full_text)\n",
+        "def process_docx(file_path, chunk_size):\n",
+        "    def text_generator():\n",
+        "        # Process the document and yield text\n",
+        "        for text in docx2txt.process(file_path).split('\\n'):\n",
+        "            yield text + ' '\n",
+        "\n",
+        "    chunks = []\n",
+        "    current_chunk = ''\n",
+        "\n",
+        "    for text in text_generator():\n",
+        "        current_chunk += text\n",
+        "\n",
+        "        while len(current_chunk) >= chunk_size:\n",
+        "            chunks.append(current_chunk[:chunk_size])\n",
+        "            current_chunk = current_chunk[chunk_size:]\n",
+        "\n",
+        "    if current_chunk:  # Add any remaining text as the last chunk\n",
+        "        chunks.append(current_chunk)\n",
+        "\n",
+        "    return chunks\n",
         "\n",
         "def process_pdf(file_path, chunk_size):\n",
         "    chunks = []\n",
@@ -776,6 +806,17 @@
         "\n",
         "                chunks.extend(page_chunks)\n",
         "\n",
+        "    return chunks\n",
+        "def process_pdf2(file_path, chunk_size):\n",
+        "    chunks = []\n",
+        "    with open(file_path, 'rb') as file:\n",
+        "        reader = PyPDF2.PdfReader(file)\n",
+        "        text = \"\"\n",
+        "        for page in reader.pages:\n",
+        "            text += page.extract_text() + \" \"\n",
+        "\n",
+        "    # Split into chunks\n",
+        "    chunks = [text[i:i+chunk_size] for i in range(0, len(text), chunk_size)]\n",
         "    return chunks\n",
         "\n",
         "def process_csv(file_path, chunk_size):\n",
@@ -806,7 +847,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "5BJTESSCAVFm"
       },
@@ -862,7 +903,7 @@
         "id": "HAPSjP0cAnO4",
         "outputId": "2d81c4a6-dc8d-4eb8-dcb4-d3fb6a59bc46"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1013,7 +1054,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "metadata": {
         "id": "HQiEn4f-Mrmq"
       },
@@ -1035,7 +1076,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "id": "POdZKsa8ASUr"
       },
@@ -1049,7 +1090,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "id": "LicnqA2VBKmq"
       },
@@ -1070,7 +1111,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "id": "xGH-CrbVBfOF"
       },
@@ -1149,7 +1190,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1284,7 +1325,7 @@
       "metadata": {
         "id": "AvmvOBWFBUnu"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1300,12 +1341,12 @@
       "metadata": {
         "id": "qunitt4xBXVk"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "id": "ZLeDAuXPolHU"
       },
@@ -1406,7 +1447,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1500,7 +1541,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNRKG2Y78RB15IX/pbbE6a9",
+      "authorship_tag": "ABX9TyPtM9fejtNg4qUoVS/u1ZGA",
       "include_colab_link": true
     },
     "kernelspec": {
